# sqlx-large-queries-print

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 1_mariadb.sql
src/: lib.rs  main.rs
